# gwr

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  cog.toml  deny.toml  licenses.html  lychee.toml  ops  prek.toml  release-plz.toml  rust-toolchain.toml  rustfmt.toml  semver-checks.sh  taplo.toml  version
check-copyright/: CHANGELOG.md  Cargo.toml
check-copyright/src/: main.rs
git-cliff-wrapper/: CHANGELOG.md  Cargo.toml
gwr-build/: Cargo.toml  README.md
gwr-build/src/: lib.rs
gwr-code-coverage/: Cargo.toml  README.md
gwr-code-coverage/recipes/: coverage.yaml
gwr-code-coverage/src/: dp_table.rs  lcs.rs  lib.rs  markdown.rs  paths.rs  source_files.rs
gwr-code-coverage/tests/: diff_coverage.rs
gwr-components/: CHANGELOG.md  Cargo.toml  README.md  build.rs
gwr-components/benches/: benchmarks_main.rs  components.rs  one_shot_benchmarks.rs  wall_clock_benchmarks.rs
gwr-components/src/: capacity_allocator.rs  cli.rs  connect.rs  delay.rs  lib.rs  queue.rs  router.rs  sink.rs  source.rs  store.rs  test_helpers.rs  types.rs
gwr-components/tests/: arbiter.rs  build_test_harness.rs  byte_store.rs  capacity_allocator.rs  delay.rs  errors.rs  object_store.rs  queue.rs  rate_limiter.rs  router.rs  store.rs  test_harness.rs  test_harness_errors.rs
gwr-engine/: CHANGELOG.md  Cargo.toml  README.md
gwr-engine/src/: engine.rs  executor.rs  global_allocator.rs  lib.rs  multi_engine.rs  port.rs  test_helpers.rs  traits.rs  types.rs
gwr-engine/tests/: clocks.rs  engine.rs  errors.rs  events_all_of.rs  events_any_of.rs  events_once.rs  events_once_default.rs  events_repeated.rs  ports.rs  run_until.rs
gwr-model-builder/: CHANGELOG.md  Cargo.toml  README.md
gwr-model-builder/src/: lib.rs
gwr-models/: CHANGELOG.md  Cargo.toml  README.md
gwr-models/benches/: ethernet_frame.rs  one_shot_benchmarks.rs  wall_clock_benchmarks.rs
gwr-models/src/: data_frame.rs  ethernet_frame.rs  ethernet_link.rs  fc_pipeline.rs  lib.rs  ring_node.rs  test_helpers.rs
gwr-models/tests/: cache.rs  cache_coherency.rs  coherency_manager.rs  ethernet_link.rs  fabric.rs  fabric_node.rs  fc_pipeline.rs  memory.rs  ring_node.rs  test_harness.rs  traffic_gen_random.rs  traffic_gen_strided.rs
gwr-onnx/: Cargo.toml  README.md  build.rs
gwr-onnx-sys/: Cargo.toml  README.md  build.rs
gwr-onnx-sys/src/: lib.rs  submodule_path.rs
gwr-onnx/src/: lib.rs
gwr-perfetto/: CHANGELOG.md  Cargo.toml  README.md  build.rs
gwr-perfetto-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
gwr-perfetto-sys/src/: lib.rs  submodule_path.rs
gwr-platform/: Cargo.toml  README.md
gwr-platform/examples/: coherent_2mem_1manager.yaml  coherent_2mem_2managers.yaml  platform.yaml  platform_4x4.yaml  platform_4x4_4xhbm.yaml  simple_pe_cache_coherent_mem.yaml  simple_pe_cache_mem.yaml
gwr-platform/recipes/: validate_platforms.yaml
gwr-platform/scripts/: gen_fabric.py
gwr-platform/src/: builder.rs  connect.rs  lib.rs  types.rs  yaml.rs
gwr-platform/tests/: errors.rs  simple_platforms.rs
gwr-protocols/: CHANGELOG.md  Cargo.toml  README.md
gwr-protocols/src/: packet.rs
gwr-resources/: CHANGELOG.md  Cargo.toml  README.md
gwr-resources/src/: base.rs
gwr-resources/tests/: resource.rs
gwr-spotter/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
gwr-spotter/frontend/: README.md  index.html  main.js  style.css
gwr-spotter/src/: app.rs  bin_loader.rs  filter.rs  handler.rs  lib.rs  log_parser.rs  main.rs  perfetto.rs  renderer.rs  rocket.rs  tui.rs  ui.rs
gwr-terminus/: CHANGELOG.md  Cargo.toml  README.md
gwr-terminus/recipes/: branch_coverage.yaml  coverage.yaml  crap.yaml  from_history.yaml  run_timetable_monitors.yaml  run_timetables.yaml  semver.yaml
gwr-terminus/src/: command.rs  lib.rs  tui.rs  vec_with_index.rs
gwr-timetable/: Cargo.toml
gwr-timetable/examples/: cache.yaml  graph.yaml  large_graph.yaml  small.yaml  tiny.yaml
gwr-timetable/recipes/: timetable_to_svg.yaml  validate_generated_timetable.yaml
gwr-timetable/scripts/: onnx-to-gwr-timetable-yaml.py  requirements.txt
gwr-timetable/src/: lib.rs  main.rs  mermaid.rs  timetable_file.rs  types.rs
gwr-timetable/tests/: dump_stats.rs  errors.rs  gen_timetable.rs  maxpool.rs  operator_activity.rs  roofline.rs  stats.rs
gwr-tools/: Cargo.toml  README.md
gwr-tools/src/: lib.rs
gwr-tools/tests/: diff_coverage.rs
gwr-track/: CHANGELOG.md  Cargo.toml  README.md
gwr-track/examples/: trace_checker.rs
gwr-track/schemas/: gwr_track.capnp
gwr-track/src/: builder.rs  entity.rs  lib.rs  perfetto_trace_builder.rs  test_helpers.rs  trace_visitor.rs
gwr-track/tests/: activity.rs  aka.rs  smoke_macros.rs
steam-components/: CHANGELOG.md  Cargo.toml
steam-components/benches/: benchmarks_main.rs  components.rs
steam-components/src/: arbiter.rs  connect.rs  delay.rs  lib.rs  router.rs  sink.rs  source.rs  store.rs  test_helpers.rs  types.rs
steam-components/tests/: arbiter.rs  compile.rs  delay.rs  errors.rs  rate_limiter.rs  router.rs
steam-config/: CHANGELOG.md  Cargo.toml
steam-config/examples/: alt_and_runtime_conf_files.rs  alt_conf_file.rs  alt_conf_file_missing.rs  full_conf_file.rs  full_conf_file.toml  no_conf_file.rs  partial_conf_file.rs  partial_conf_file.toml  runtime_conf_file.rs  runtime_conf_file.toml
steam-config/src/: lib.rs  multi_source_config.rs
steam-config/tests/: parse_extra_conf_file.rs  partial_conf_file1.toml  partial_conf_file2.toml  partial_conf_file3.toml
steam-developer-guide/: .gitignore  CHANGELOG.md  Cargo.toml  book.toml
steam-developer-guide/md_src/: SUMMARY.md  getting_started.md  links_depth1.md  links_depth2.md  links_external.md
steam-doc-builder/: CHANGELOG.md  Cargo.toml
steam-doc-builder/src/: toc.rs  (+4 more)
steam-engine/: CHANGELOG.md  Cargo.toml
steam-model-builder/: CHANGELOG.md  Cargo.toml
steam-models/: CHANGELOG.md  Cargo.toml
steam-perfetto/: Cargo.toml  build.rs
steam-perfetto-sys/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
(+606 files in other folders)
