# Copyright (c) 2023 Graphcore Ltd. All rights reserved.

[workspace]
members = [
    "check-copyright",
    "examples/flaky-component",
    "examples/flaky-with-delay",
    "examples/scrambler",
    "examples/sim-fabric",
    "examples/sim-ring",
    "tramway-components",
    "tramway-config",
    "tramway-developer-guide",
    "tramway-doc-builder",
    "tramway-docpp",
    "tramway-engine",
    "tramway-model-builder",
    "tramway-models",
    "tramway-perfetto-sys",
    "tramway-perfetto",
    "tramway-protocols",
    "tramway-resources",
    "tramway-spotter",
    "tramway-terminus",
    "tramway-track",
]
resolver = "2"

[workspace.package]
authors = ["The Silicon Architecture team"]
edition = "2024"
rust-version = "1.90"
description = "Tramway is Rust Async Modelling for hardWare Architecture and sYstems (TRAMWAY)"
homepage = "https://github.com/graphcore-research/tramway"
documentation = "https://graphcore-research.github.io/tramway"
readme = "README.md"
keywords = ["tramway"]
categories = [
    "asynchronous",
    "simulation",
]
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/graphcore-research/tramway"
publish = ["kellnr"]

[workspace.dependencies]
approx = "0.5.1"
async-trait = "0.1.88"
byte-unit = "5.1.6"
capnp = "0.21.1"
capnpc = "0.21.0"
clap = { version = "4.4.6", features = ["derive"] }
criterion = "0.7.0"
crossterm = "0.29.0"
event-listener = "3.0.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
futures = "0.3.28"
itertools = "0.14.0"
log = { version = "0.4.20", features = ["std", "serde"] }
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2"
paste = "1.0.14"
proc-macro2 = "1.0.69"
prost = "0.14.1"
prost-build = "0.14.1"
quote = "1.0.33"
rand = "0.9.2"
ratatui = "0.29.0"
regex = "1.9.6"
serde = { version = "1.0.188", features = ["derive"] }
serial_test = "3.2.0"
syn = { version = "1.0.41", features = ["parsing", "full", "extra-traits"] }
tempfile = "3.19.0"
trybuild = "1.0.103"
