# Copyright (c) 2023 Graphcore Ltd. All rights reserved.

[workspace]
members = [
    "check-copyright",
    "examples/flaky-component",
    "examples/flaky-with-delay",
    "examples/scrambler",
    "examples/sim-fabric",
    "examples/sim-pipe",
    "examples/sim-ring",
    "gwr-components",
    "gwr-config",
    "gwr-developer-guide",
    "gwr-doc-builder",
    "gwr-docpp",
    "gwr-engine",
    "gwr-model-builder",
    "gwr-models",
    "gwr-perfetto-sys",
    "gwr-perfetto",
    "gwr-protocols",
    "gwr-resources",
    "gwr-spotter",
    "gwr-terminus",
    "gwr-track",
]
resolver = "2"

[workspace.package]
authors = ["The Silicon Architecture team"]
edition = "2024"
rust-version = "1.90"
description = "The Great Western Runtime (GWR)"
homepage = "https://github.com/graphcore-research/gwr"
documentation = "https://graphcore-research.github.io/gwr"
readme = "README.md"
keywords = ["gwr"]
categories = [
    "asynchronous",
    "simulation",
]
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/graphcore-research/gwr"
publish = true

[workspace.dependencies]
approx = "0.5.1"
async-trait = "0.1.88"
byte-unit = "5.1.6"
capnp = "0.25.0"
capnpc = "0.25.0"
clap = { version = "4.4.6", features = ["derive"] }
criterion = "0.8.1"
crossterm = "0.29.0"
event-listener = "3.0.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
futures = "0.3.28"
indicatif = "0.18.0"
itertools = "0.14.0"
log = { version = "0.4.20", features = ["std", "serde"] }
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2"
paste = "1.0.14"
proc-macro2 = "1.0.69"
prost = "0.14.1"
prost-build = "0.14.1"
quote = "1.0.33"
rand = "0.9.2"
ratatui = "0.30.0"
regex = "1.9.6"
serde = { version = "1.0.188", features = ["derive"] }
serial_test = "3.2.0"
syn = { version = "1.0.41", features = ["parsing", "full", "extra-traits"] }
tempfile = "3.19.0"
trybuild = "1.0.103"
