# Copyright (c) 2025 Graphcore Ltd. All rights reserved.

[package]
name = "check-copyright"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Check files contains the correct copyright notice"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
