[package]
name = "git-cliff-wrapper"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A git-cliff wrapper used by the pre-commit hooks"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
