# Copyright (c) 2026 Graphcore Ltd. All rights reserved.

[package]
name = "gwr-build"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared helpers for GWR build scripts"
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["build", "gwr"]
categories = ["development-tools::build-utils"]
publish.workspace = true

[dependencies]
