# Copyright (c) 2026 Graphcore Ltd. All rights reserved.

[package]
name = "gwr-code-coverage"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Code coverage tools for GWR"
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["coverage", "gwr"]
categories = ["command-line-utilities", "development-tools"]
publish.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
