# Copyright (c) 2023 Graphcore Ltd. All rights reserved.

[package]
name = "gwr-components"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Collection of connectable component primitives to be used when building models"
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmarks_main"
harness = false

[dependencies]
async-trait.workspace = true
futures.workspace = true
gwr-engine = { path = "../gwr-engine", version = "0.8.0" }
gwr-model-builder = { path = "../gwr-model-builder", version = "0.2.0" }
gwr-resources = { path = "../gwr-resources", version = "0.1.0" }
gwr-track = { path = "../gwr-track", version = "0.7.0" }
log.workspace = true
paste.workspace = true

[dev-dependencies]
clap.workspace = true
criterion.workspace = true
rand.workspace = true
trybuild.workspace = true
