# Copyright (c) 2023 Graphcore Ltd. All rights reserved.

[package]
name = "gwr-engine"
version = "0.9.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Simulation engine which executes event driven asynchronous components and models"
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
byte-unit.workspace = true
clap.workspace = true
futures.workspace = true
gwr-track = { path = "../gwr-track", version = "0.7.0" }
log.workspace = true
mimalloc = { version = "0.1.48", features = ["v3"], optional = true }

[dev-dependencies]
arc-swap = "1.6.0"
gwr-components = { path = "../gwr-components", version = "0.7.0" }

[features]
default = ["global_allocator"]
global_allocator = ["dep:mimalloc"]
phase = []
