# Copyright (c) 2026 Graphcore Ltd. All rights reserved.

[package]
name = "gwr-onnx-sys"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "ONNX source integration for Cargo"
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories = ["encoding", "science", "simulation"]
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
