# Copyright (c) 2023 Graphcore Ltd. All rights reserved.

[package]
name = "gwr-protocols"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Collection of packet based protocols to be used when building simulations"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste.workspace = true

[dev-dependencies]
gwr-components = { path = "../gwr-components" }
gwr-engine = { path = "../gwr-engine" }
gwr-track = { path = "../gwr-track" }
