# Copyright (c) 2023 Graphcore Ltd. All rights reserved.

[package]
name = "gwr-resources"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Collection of shared resource primitives to be used when building simulations"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gwr-engine = { path = "../gwr-engine" }

[dev-dependencies]
gwr-track = { path = "../gwr-track" }
