# Copyright (c) 2025 Graphcore Ltd. All rights reserved.

[package]
name = "gwr-terminus"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Command-line assistant for GWR"
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["gwr", "commands", "utility", "assistant"]
categories = ["command-line-utilities", "command-line-interface", "development-tools"]
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
color-eyre = "0.6.3"
crossterm.workspace = true
env_logger = "0.11.8"
log.workspace = true
ratatui.workspace = true
regex.workspace = true
serde_yaml_ng = "0.10.0"
serde.workspace = true
