# Copyright (c) 2026 Graphcore Ltd. All rights reserved.

[package]
name = "gwr-timetable"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Library for managing/checking execution timetables for processing elements"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools::debugging", "parsing", "simulation"]
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait.workspace = true
clap.workspace = true
gwr-engine = { path = "../gwr-engine", version = "0.9.0" }
gwr-model-builder = { path = "../gwr-model-builder", version = "0.2.0" }
gwr-models = { path = "../gwr-models", version = "0.15.0" }
gwr-platform = { path = "../gwr-platform", version = "0.1.0" }
gwr-track = { path = "../gwr-track", features = ["perfetto"], version = "0.7.0" }
indicatif.workspace = true
log.workspace = true
serde.workspace = true
serde_yaml.workspace = true
