# Copyright (c) 2023 Graphcore Ltd. All rights reserved.

[package]
name = "steam-components"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Collection of connectable component primitives to be used when building models"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmarks_main"
harness = false

[dependencies]
async-std.workspace = true
async-trait.workspace = true
atomic_float = "0.1.0"
log.workspace = true
futures.workspace = true
paste.workspace = true
steam-engine = { path = "../steam-engine" }
steam-model-builder = { path = "../steam-model-builder" }
steam-resources = { path = "../steam-resources" }
steam-track = { path = "../steam-track" }

[dev-dependencies]
clap.workspace = true
criterion.workspace = true
rand.workspace = true
trybuild.workspace = true
