# Copyright (c) 2023 Graphcore Ltd. All rights reserved.

[package]
name = "steam-developer-guide"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "User guide book source and build system"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx.workspace = true
clap.workspace = true
event-listener.workspace = true
futures.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
steam-components = { path = "../steam-components" }
steam-engine = { path = "../steam-engine" }
steam-track = { path = "../steam-track" }

[dev-dependencies]
strip-ansi-escapes = "0.2.1"
