# Copyright (c) 2023 Graphcore Ltd. All rights reserved.

[package]
name = "steam-engine"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Simulation engine which executes event driven asynchronous components and models"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std.workspace = true
clap.workspace = true
event-listener.workspace = true
futures.workspace = true
itertools.workspace = true
log.workspace = true
steam-track = { path = "../steam-track" }

[dev-dependencies]
arc-swap = "1.6.0"
criterion.workspace = true
steam-components = { path = "../steam-components" }
