# Copyright (c) 2023 Graphcore Ltd. All rights reserved.

[package]
name = "steam-model-builder"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Procedural Macros for Generating Model Blocks"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
clap.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
syn.workspace = true
