# Copyright (c) 2024 Graphcore Ltd. All rights reserved.

[package]
name = "steam-perfetto-sys"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Perfetto build system integration for Cargo"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["development-tools::debugging", "encoding", "simulation"]
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
_perfetto_src = []
_perfetto_ui = ["_perfetto_src"]
