# Copyright (c) 2025 Graphcore Ltd. All rights reserved.

[package]
name = "steam-perfetto"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Perfetto Trace and Track Event access functions"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["development-tools::debugging", "encoding", "simulation"]
publish.workspace = true

[dependencies]
prost.workspace = true

[build-dependencies]
prost-build.workspace = true
steam-perfetto-sys = { path = "../steam-perfetto-sys", features = ["_perfetto_src"] }

[features]
_perfetto-protoc = ["steam-perfetto-sys/_perfetto_ui"]
